1. Реализована возможность настройки построения истории эксперимента (https://team-1607756591970.atlassian.net/browse/ECA-38)

== Релиз 6.9.3

1. Реализован функционал по созданию primary key при сохранении обучающей выборки в БД (https://team-1607756591970.atlassian.net/browse/ECA-39)
2. Реализовано сохранение атрибута класса в файл (https://team-1607756591970.atlassian.net/browse/ECA-40)
3. Добавлен прогресс бар при сохранении данных (https://team-1607756591970.atlassian.net/browse/ECA-41)
4. Произведена оптимизация алгортмов деревьев решений (https://team-1607756591970.atlassian.net/browse/ECA-42)

== Релиз 6.9.4

1. Реализован переход на новый формат API Eca - service с загрузкой модели классификатора из S3 (https://team-1607756591970.atlassian.net/browse/ECA-43)

== Релиз 6.9.5

1. Реализован переход на новый формат API Eca - service с загрузкой обучающих выборок в единое хранилище (https://team-1607756591970.atlassian.net/browse/ECA-44)
2. Реализован переход на новый формат API Eca - service с настройками классификаторов в формате json (https://team-1607756591970.atlassian.net/browse/ECA-45)

== Релиз 6.9.6

1. Исправлен NPE при сохранении обучающих выборок (https://tracker.yandex.ru/ECS-3)

== Релиз 6.9.7

1. Реализована загрузка моделей из zip архива (https://tracker.yandex.ru/ECS-22)

== Релиз 6.9.8

1. Обновлена библиотека weka-stable до версии 3.8.6 (https://tracker.yandex.ru/ECS-33)

== Релиз 6.9.8-jdk17

1. Обновлена версия java до 17 (https://tracker.yandex.ru/ECS-32)

== Релиз 6.9.9

1. Обновлено API для авторизации по протоколу oauth2 (https://tracker.yandex.ru/ECS-40)
2. Убрана поддержка формата обучающих выборок в формате docx
3. Обновлена версия java до 21 (https://tracker.yandex.ru/ECS-41)

== Релиз 7.0

1. Улучшение производительности загрузки данных из excel файлов с помощью библиотеки fastexcel (https://tracker.yandex.ru/ECS-47)
2. Устранены утечки памяти (https://tracker.yandex.ru/ECS-53)